# netbox-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
skills/netbox-mcp-operator/: SKILL.md
skills/netbox-mcp-operator/agents/: openai.yaml
skills/netbox-mcp-operator/references/: tool-catalog.md
src/netbox_mcp_server/: __init__.py  __main__.py  config.py  netbox_client.py  netbox_types.py  server.py
